--- a/client/src/styles/homepage.module.scss
+++ b/client/src/styles/homepage.module.scss
@@ -43,6 +43,7 @@
     font-size: 1.5rem;
     margin-bottom: 10px;
   }
+
   
   .categoryList, .itemList {
     display: grid;
@@ -85,6 +86,22 @@
     border-radius: 4px;
     font-size: 1.2rem;
     transition: background-color 0.3s;
+  
+    &:hover {
+      background-color: #0056b3;
+    }
+  }
+
+  .viewMoreButton {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 1rem;
+    text-align: center;
   
     &:hover {
       background-color: #0056b3;
