--- a/client/src/styles/categoryPage.module.scss
+++ b/client/src/styles/categoryPage.module.scss
@@ -1,35 +1,34 @@
-/* src/styles/category.module.scss */
-
 .categoryPageContainer {
-    padding: 20px;
-    background-color: #f9f9f9;
-  }
-  
-  .categoryPageContainer h1 {
-    font-size: 2rem;
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+
+  h1 {
+    font-size: 2.5rem;
     margin-bottom: 20px;
+    text-align: center;
   }
-  
-  .itemList {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .item {
-    background: #fff;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 15px;
-    margin-bottom: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .item h3 {
-    margin: 0;
+}
+
+.gridContainer {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
+}
+
+.itemCard {
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 15px;
+  text-align: center;
+
+  h3 {
+    margin-top: 0;
     font-size: 1.5rem;
   }
-  
-  .item p {
-    margin: 5px 0;
+
+  p {
+    margin: 10px 0;
   }
-  
+}
