--- a/client/src/styles/navbar.module.scss
+++ b/client/src/styles/navbar.module.scss
@@ -137,3 +137,33 @@ button {
 button:hover {
   color: #cce7ff;
 }
+
+.searchResults {
+  position: absolute;
+  background-color: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-height: 200px;
+  overflow-y: auto;
+  z-index: 100;
+
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+    li {
+      padding: 8px;
+      border-bottom: 1px solid #eee;
+
+      &:hover {
+        background-color: #f9f9f9;
+      }
+
+      a {
+        text-decoration: none;
+        color: #333;
+      }
+    }
+  }
+}
