--- a/client/src/styles/global.module.scss
+++ b/client/src/styles/global.module.scss
@@ -1,3 +1,16 @@
+html, body, #root {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
 .App {
     margin-top: 70px;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
+
+.App > div {
+    flex: 1; /* Pushes the footer to the bottom */
+  }
