rating changes, slight global scss changes

--- a/client/src/styles/global.module.scss
+++ b/client/src/styles/global.module.scss
@@ -1,8 +1,8 @@
-html, body, #root {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
+// html, body, #root {
+//     height: 100%;
+//     margin: 0;
+//     padding: 0;
+//   }
 
 .App {
     margin-top: 70px;
@@ -11,6 +11,6 @@ html, body, #root {
     flex-direction: column;
 }
 
-.App > div {
-    flex: 1; /* Pushes the footer to the bottom */
-  }
+// .App > div {
+//     flex: 1; /* Pushes the footer to the bottom */
+//   }
